Collected ages of funds and added them; Computed networks with investors

--- a/markdown/sum.table_tex_short.tex
+++ b/markdown/sum.table_tex_short.tex
@@ -1,19 +1,19 @@
  General undervaluation/maximize shareholder value & 0 & 0\% & NA \\ 
-  Excess cash, under-leverage, dividends/repurchases & 66 & 18.2\% & 0\% \\ 
-  Equity issuance, restructure debt, recapitalization & 23 & 6.35\% & 0\% \\ 
-  Operational efficiency & 36 & 9.94\% & 0\% \\ 
-  Lack of focus, business restructuring and spinning off & 53 & 14.6\% & 0\% \\ 
-  M\&A: as target (against the deal/for better terms) & 34 & 9.39\% & 0\% \\ 
-  M\&A: as acquirer (against the deal/for better terms) & 13 & 3.59\% & 0\% \\ 
-  Pursue growth strategies & 5 & 1.38\% & 0\% \\ 
-  Sell company or main assets to a third party & 87 & 24\% & 0\% \\ 
-  Take control/buyout company and/or take it private & 11 & 3.04\% & 0\% \\ 
-  Rescind takeover defenses & 23 & 6.35\% & 0\% \\ 
-  Oust CEO, chairman & 35 & 9.67\% & 0\% \\ 
-  Board independence and fair representation & 99 & 27.3\% & 0\% \\ 
-  More information disclosure/potential fraud & 23 & 6.35\% & 0\% \\ 
-  Excess executive compensation/pay for performance & 37 & 10.2\% & 0\% \\ 
-  Institute enviromental protection policy & 3 & 0.829\% & 0\% \\ 
-  Public Short Position/Bear Raid & 0 & 0\% & NaN\% \\ 
-  Sum of categories not falling into general undervaluation & 362 & 100\% & 66.9\% \\ 
+  Excess cash, under-leverage, dividends/repurchases & 73 & 15.4\% & 68.5\% \\ 
+  Equity issuance, restructure debt, recapitalization & 41 & 8.67\% & 82.9\% \\ 
+  Operational efficiency & 47 & 9.94\% & 46.8\% \\ 
+  Lack of focus, business restructuring and spinning off & 69 & 14.6\% & 71\% \\ 
+  M\&A: as target (against the deal/for better terms) & 46 & 9.73\% & 32.6\% \\ 
+  M\&A: as acquirer (against the deal/for better terms) & 15 & 3.17\% & 80\% \\ 
+  Pursue growth strategies & 6 & 1.27\% & 33.3\% \\ 
+  Sell company or main assets to a third party & 103 & 21.8\% & 52.4\% \\ 
+  Take control/buyout company and/or take it private & 12 & 2.54\% & 33.3\% \\ 
+  Rescind takeover defenses & 29 & 6.13\% & 48.3\% \\ 
+  Oust CEO, chairman & 50 & 10.6\% & 60\% \\ 
+  Board independence and fair representation & 135 & 28.5\% & 71.9\% \\ 
+  More information disclosure/potential fraud & 36 & 7.61\% & 22.2\% \\ 
+  Excess executive compensation/pay for performance & 44 & 9.3\% & 50\% \\ 
+  Institute enviromental protection policy & 5 & 1.06\% & 0\% \\ 
+  Public Short Position/Bear Raid & 2 & 0.228\% & NA \\ 
+  Sum of categories not falling into general undervaluation & 473 & 100\% & 66.8\% \\ 
   
