--- a/markdown/short_summary_tex.tex
+++ b/markdown/short_summary_tex.tex
@@ -1,24 +1,34 @@
- campaign outcome & won\_brep\_percent & 0 & 0.25 & 0.49 & 0.5 & 0.75 & 1 & 0.36 \\ 
-  campaign outcome & won\_brep\_dummy & 0 & 1 & 0.95 & 1 & 1 & 1 & 0.22 \\ 
+ campaign outcome & checked\_board\_seats\_won & 0 & 0 & 1.51 & 1 & 2 & 7 & 1.46 \\ 
+  campaign outcome & won\_board\_ind & 0 & 0 & 0.71 & 1 & 1 & 1 & 0.46 \\ 
   campaign outcome & success\_of\_stated\_obj & 0 & 0 & 0.64 & 1 & 1 & 1 & 0.48 \\ 
-  campaign outcome & sales\_growth & -0.96 & -0.03 & 0.17 & 0 & 0.05 & 25.38 & 1.73 \\ 
-  campaign outcome & oper\_profit\_growth & -10.47 & -0.04 & 0.13 & 0 & 0.1 & 11.09 & 1.71 \\ 
-  activists' persuasiveness & log(active.activist.size) & 3.23 & 6.44 & 7.75 & 7.73 & 9.01 & 13.21 & 1.81 \\ 
-  network variable & investor.number & 2 & 53 & 63.7 & 71 & 85.75 & 122 & 27.59 \\ 
-  network variable & total.activist.number & 1 & 52 & 62.69 & 70 & 84.75 & 121 & 27.59 \\ 
-  network variable & log(activist.size.vweighted) & 7.39 & 10.59 & 10.98 & 10.81 & 11.52 & 16.21 & 1 \\ 
-  network variable & log(activist.size.average) & 6.99 & 10.22 & 10.42 & 10.38 & 10.65 & 12.91 & 0.49 \\ 
-  network variable & spring measure & 0 & 0 & 0.02 & 0 & 0.01 & 0.97 & 0.04 \\ 
-  network variable & number of connections & 1 & 1 & 30 & 4 & 15 & 3369 & 129.55 \\ 
-  control variable & log(size) & 3.03 & 5.75 & 7.2 & 7 & 8.33 & 13.03 & 1.95 \\ 
-  control variable & age & 1 & 11 & 22.33 & 19 & 30 & 53 & 14.03 \\ 
-  control variable & leverage & -30.1 & 0.09 & 1.25 & 0.43 & 1.2 & 112.41 & 6.96 \\ 
-  control variable & mtb & -113.94 & 1.15 & 3.26 & 1.8 & 2.9 & 316.84 & 19.05 \\ 
-  control variable & oper\_profit & -1061 & 11.31 & 506.97 & 50.68 & 182.5 & 21332 & 2182.34 \\ 
-  control variable & roa & -1938.71 & -38.48 & 53.08 & 40.07 & 111.66 & 4325.62 & 393.1 \\ 
-  control variable & tobins\_q & 0.17 & 0.86 & 1.51 & 1.19 & 1.61 & 19.54 & 1.8 \\ 
-  control variable & asset\_turnover & -0.06 & 0.09 & 0.2 & 0.16 & 0.26 & 1.2 & 0.16 \\ 
-  control variable & rd\_to\_assets & 0 & 0 & 32.57 & 0 & 7.91 & 1444 & 149.79 \\ 
-  control variable & revtq & -1569.77 & 69.03 & 2638.19 & 218.53 & 954.47 & 124238 & 11512.07 \\ 
-  control variable & saleq & 5.54 & 65.63 & 2699.91 & 196.2 & 1274.41 & 35712 & 7201.09 \\ 
+  campaign outcome & sales\_growth & -0.96 & -0.02 & 0.4 & 0 & 0.03 & 25.38 & 3 \\ 
+  campaign outcome & oper\_profit\_growth & -10.47 & -0.02 & 0.1 & 0 & 0.07 & 11.09 & 1.51 \\ 
+  activists' persuasiveness & log(active.activist.size) & 3.23 & 7.36 & 9.64 & 9.07 & 11.58 & 17.54 & 3.18 \\ 
+  network variable & investor.number & 2 & 54 & 63.75 & 72 & 85 & 123 & 27.64 \\ 
+  network variable & total.activist.number & 1 & 53 & 62.69 & 71 & 83 & 122 & 27.62 \\ 
+  network variable & log(activist.size.vweighted) & 9.79 & 10.69 & 12.66 & 10.98 & 12.57 & 23.11 & 3.1 \\ 
+  network variable & log(activist.size.average) & 9.38 & 10.23 & 12.1 & 10.37 & 11.17 & 19.81 & 3.18 \\ 
+  network variable & log(inv\_size\_nw\_s) & 12 & 15.12 & 17.94 & 16.17 & 20.48 & 28.35 & 3.92 \\ 
+  network variable & log(inv\_size\_nw\_spr) & 3.52 & 6.99 & 9.73 & 8.45 & 12.18 & 19.8 & 3.87 \\ 
+  network variable & log(act\_size\_nw\_s) & -Inf & 15.11 & -Inf & 16.16 & 19.73 & 28.29 & NaN \\ 
+  network variable & log(act\_size\_nw\_spr) & -Inf & 6.86 & -Inf & 8.3 & 11.74 & 19.76 & NaN \\ 
+  network variable & log(act\_s\_clos) & -4.46 & -1.11 & -0.36 & 0.44 & 0.78 & 2.41 & 1.54 \\ 
+  network variable & log(oth\_s\_clos) & -3.66 & -1.36 & -0.81 & -0.66 & -0.01 & 2.45 & 1.12 \\ 
+  network variable & log(act\_s\_betw) & -2.46 & -0.17 & 0.52 & 0.68 & 0.89 & 2.45 & 0.89 \\ 
+  network variable & log(oth\_s\_betw) & -5.84 & -1.07 & -0.7 & -0.45 & 0.15 & 2.21 & 1.45 \\ 
+  network variable & spring fund & 0 & 0 & 0.02 & 0 & 0.01 & 0.97 & 0.04 \\ 
+  network variable & \# of connections fund & 1 & 1 & 30.61 & 4 & 15 & 3369 & 129.49 \\ 
+  network variable & spring top20 & 0 & 0 & 0.02 & 0 & 0.01 & 0.97 & 0.04 \\ 
+  network variable & \# of connections top20 & 1 & 1 & 30.61 & 4 & 15 & 3369 & 129.49 \\ 
+  control variable & log(size) & 3.03 & 5.81 & 7.45 & 7.24 & 8.74 & 13.03 & 2.09 \\ 
+  control variable & age & 1 & 11 & 23.45 & 19 & 32.5 & 53 & 15.1 \\ 
+  control variable & leverage & -30.1 & 0.1 & 1.17 & 0.43 & 1.19 & 112.41 & 6.16 \\ 
+  control variable & mtb & -113.94 & 1.21 & 2.98 & 1.69 & 2.69 & 316.84 & 16.74 \\ 
+  control variable & oper\_profit & -1061 & 10.65 & 720.09 & 58.57 & 262.71 & 21332 & 2595.16 \\ 
+  control variable & roa & -1938.71 & -40.96 & 53.59 & 41.28 & 122.54 & 4325.62 & 351.92 \\ 
+  control variable & tobins\_q & 0.17 & 0.86 & 1.45 & 1.19 & 1.59 & 19.54 & 1.64 \\ 
+  control variable & asset\_turnover & -0.06 & 0.08 & 0.19 & 0.16 & 0.25 & 1.2 & 0.16 \\ 
+  control variable & rd\_to\_assets & 0 & 0 & 36.63 & 0 & 4.92 & 1444 & 171.03 \\ 
+  control variable & revtq & -1569.77 & 78.19 & 4160.4 & 294.94 & 1247.88 & 124238 & 14395.7 \\ 
+  control variable & saleq & 5.54 & 66.37 & 4881.28 & 242.01 & 1771 & 35712 & 10729.93 \\ 
   
