--- a/markdown/sum_table_tex.tex
+++ b/markdown/sum_table_tex.tex
@@ -1,19 +1,19 @@
- General undervaluation/maximize shareholder value & 115 & 24.6\% & NA \\ 
-  Excess cash, under-leverage, dividends/repurchases & 28 & 6\% & 71.4\% \\ 
-  Equity issuance, restructure debt, recapitalization & 16 & 3.43\% & 50\% \\ 
-  Operational efficiency & 24 & 5.14\% & 45.8\% \\ 
-  Lack of focus, business restructuring and spinning off & 9 & 1.93\% & 66.7\% \\ 
-  M\&A: as target (against the deal/for better terms) & 19 & 4.07\% & 31.6\% \\ 
-  M\&A: as acquirer (against the deal/for better terms) & 4 & 0.857\% & 100\% \\ 
-  Pursue growth strategies & 8 & 1.71\% & 50\% \\ 
-  Sell company or main assets to a third party & 37 & 7.92\% & 56.8\% \\ 
-  Take control/buyout company and/or take it private & 32 & 6.85\% & 40.6\% \\ 
-  Rescind takeover defenses & 15 & 3.21\% & 53.3\% \\ 
-  Oust CEO, chairman & 11 & 2.36\% & 63.6\% \\ 
-  Board independence and fair representation & 178 & 38.1\% & 64.6\% \\ 
-  More information disclosure/potential fraud & 25 & 5.35\% & 12\% \\ 
-  Excess executive compensation/pay for performance & 25 & 5.35\% & 40\% \\ 
-  Institute enviromental protection policy & 14 & 3\% & 0\% \\ 
-  Public Short Position/Bear Raid & 2 & 0.428\% & 0\% \\ 
-  Sum of categories not falling into general undervaluation & 352 & 75.4\% & 57.7\% \\ 
+ General undervaluation/maximize shareholder value & 115 & 13.1\% & NA \\ 
+  Excess cash, under-leverage, dividends/repurchases & 94 & 10.7\% & 64.9\% \\ 
+  Equity issuance, restructure debt, recapitalization & 32 & 3.64\% & 56.2\% \\ 
+  Operational efficiency & 61 & 6.94\% & 50.8\% \\ 
+  Lack of focus, business restructuring and spinning off & 84 & 9.56\% & 73.8\% \\ 
+  M\&A: as target (against the deal/for better terms) & 64 & 7.28\% & 32.8\% \\ 
+  M\&A: as acquirer (against the deal/for better terms) & 17 & 1.93\% & 82.4\% \\ 
+  Pursue growth strategies & 8 & 0.91\% & 50\% \\ 
+  Sell company or main assets to a third party & 135 & 15.4\% & 48.1\% \\ 
+  Take control/buyout company and/or take it private & 46 & 5.23\% & 41.3\% \\ 
+  Rescind takeover defenses & 43 & 4.89\% & 46.5\% \\ 
+  Oust CEO, chairman & 65 & 7.39\% & 53.8\% \\ 
+  Board independence and fair representation & 286 & 32.5\% & 69.6\% \\ 
+  More information disclosure/potential fraud & 56 & 6.37\% & 17.9\% \\ 
+  Excess executive compensation/pay for performance & 57 & 6.48\% & 50.9\% \\ 
+  Institute enviromental protection policy & 21 & 2.39\% & 0\% \\ 
+  Public Short Position/Bear Raid & 2 & 0.228\% & NA \\ 
+  Sum of categories not falling into general undervaluation & 764 & 86.9\% & 60.9\% \\ 
   
