--- a/markdown/upper2_tex.tex
+++ b/markdown/upper2_tex.tex
@@ -1,24 +1,24 @@
  & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 & 20 & 21 & 22 \\ 
  1 success\_of\_stated\_obj & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  2 won\_brep\_dummy & 0.09 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  3 total.activist.number & 0.09 & 0.13 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  4 activist.size.vweighted & -0.02 & 0.03 & -0.07 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  5 activist.size.average & 0.04 & -0.04 & -0.3 & 0.84 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  6 age & -0.06 & 0.03 & 0.07 & 0 & -0.06 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  7 leverage & -0.04 & 0.02 & -0.02 & 0.03 & 0.01 & 0.05 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  8 size & -0.17 & 0.04 & 0.06 & 0.11 & 0.01 & 0.34 & 0 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  9 mtb & -0.03 & 0.02 & -0.03 & 0.03 & 0.02 & 0.04 & 0.96 & 0.01 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  10 oper\_profit & -0.18 & 0.03 & 0.06 & 0.05 & -0.02 & 0.3 & 0.01 & 0.95 & 0.01 & 1 &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  11 act\_s\_clos & -0.06 & 0.06 & 0.21 & -0.04 & -0.12 & -0.05 & 0.08 & -0.03 & 0.09 & 0 & 1 &  &  &  &  &  &  &  &  &  &  &  \\ 
-  12 act\_s\_betw & -0.09 & 0.04 & 0.13 & -0.02 & -0.08 & -0.06 & 0.04 & -0.01 & 0.04 & 0.01 & 0.9 & 1 &  &  &  &  &  &  &  &  &  &  \\ 
-  13 act\_s\_bon & 0.05 & -0.06 & -0.23 & 0.05 & 0.13 & 0.08 & -0.09 & 0.04 & -0.09 & 0.01 & -0.98 & -0.88 & 1 &  &  &  &  &  &  &  &  &  \\ 
-  14 act\_sp\_clos & -0.06 & 0.06 & 0.21 & -0.04 & -0.12 & -0.05 & 0.08 & -0.03 & 0.09 & 0 & 1 & 0.9 & -0.98 & 1 &  &  &  &  &  &  &  &  \\ 
-  15 act\_sp\_betw & -0.09 & 0.04 & 0.13 & -0.02 & -0.08 & -0.06 & 0.04 & -0.01 & 0.04 & 0.01 & 0.9 & 1 & -0.88 & 0.9 & 1 &  &  &  &  &  &  &  \\ 
-  16 act\_sp\_bon & 0.04 & -0.06 & -0.24 & 0.05 & 0.13 & 0.06 & -0.06 & 0.03 & -0.06 & 0.01 & -0.98 & -0.88 & 0.96 & -0.98 & -0.88 & 1 &  &  &  &  &  &  \\ 
-  17 oth\_s\_clos & 0.1 & 0.06 & 0.57 & -0.09 & -0.16 & -0.08 & -0.05 & -0.11 & -0.06 & -0.12 & 0.2 & 0.04 & -0.26 & 0.2 & 0.04 & -0.26 & 1 &  &  &  &  &  \\ 
-  18 oth\_s\_betw & 0.15 & 0.08 & 0.67 & -0.08 & -0.15 & -0.03 & -0.06 & -0.1 & -0.05 & -0.1 & 0.14 & 0.03 & -0.21 & 0.14 & 0.03 & -0.2 & 0.87 & 1 &  &  &  &  \\ 
-  19 oth\_s\_bon & -0.1 & -0.06 & -0.56 & 0.09 & 0.18 & 0.1 & 0.05 & 0.11 & 0.06 & 0.11 & -0.17 & -0.03 & 0.26 & -0.17 & -0.03 & 0.25 & -0.96 & -0.88 & 1 &  &  &  \\ 
-  20 oth\_sp\_clos & 0.1 & 0.06 & 0.57 & -0.09 & -0.16 & -0.08 & -0.05 & -0.11 & -0.06 & -0.12 & 0.2 & 0.04 & -0.26 & 0.2 & 0.04 & -0.26 & 1 & 0.87 & -0.96 & 1 &  &  \\ 
-  21 oth\_sp\_betw & 0.15 & 0.08 & 0.67 & -0.08 & -0.15 & -0.03 & -0.06 & -0.1 & -0.05 & -0.1 & 0.14 & 0.03 & -0.21 & 0.14 & 0.03 & -0.2 & 0.87 & 1 & -0.88 & 0.87 & 1 &  \\ 
-  22 oth\_sp\_bon & -0.11 & -0.06 & -0.55 & 0.09 & 0.18 & 0.1 & 0.05 & 0.1 & 0.06 & 0.11 & -0.19 & -0.03 & 0.26 & -0.19 & -0.03 & 0.26 & -0.98 & -0.86 & 0.98 & -0.98 & -0.86 & 1 \\ 
+  2 won\_board\_ind & 0.22 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  3 total.activist.number & 0.01 & 0.3 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  4 activist.size.vweighted & -0.05 & -0.01 & -0.1 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  5 activist.size.average & 0 & -0.14 & -0.59 & 0.76 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  6 age & -0.04 & -0.22 & -0.01 & 0.01 & 0.02 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  7 leverage & -0.03 & 0.1 & -0.02 & 0.03 & 0.03 & 0.03 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  8 size & -0.16 & -0.14 & 0.05 & 0.12 & 0.04 & 0.38 & -0.01 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  9 mtb & -0.02 & 0.14 & -0.03 & 0.03 & 0.03 & 0.03 & 0.96 & 0.01 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  10 oper\_profit & -0.2 & -0.3 & 0.04 & 0.07 & 0.02 & 0.37 & 0 & 0.95 & 0.01 & 1 &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  11 act\_s\_clos & -0.13 & -0.02 & 0.25 & -0.05 & -0.17 & -0.03 & 0.06 & -0.04 & 0.06 & -0.01 & 1 &  &  &  &  &  &  &  &  &  &  &  \\ 
+  12 act\_s\_betw & -0.19 & -0.08 & 0.18 & -0.03 & -0.1 & -0.01 & 0.02 & -0.03 & 0.02 & 0 & 0.92 & 1 &  &  &  &  &  &  &  &  &  &  \\ 
+  13 act\_s\_bon & 0.15 & 0.03 & -0.29 & 0.06 & 0.18 & 0.02 & -0.09 & 0.06 & -0.09 & 0.02 & -0.95 & -0.91 & 1 &  &  &  &  &  &  &  &  &  \\ 
+  14 act\_sp\_clos & -0.13 & -0.02 & 0.25 & -0.05 & -0.17 & -0.03 & 0.06 & -0.04 & 0.06 & -0.01 & 1 & 0.92 & -0.95 & 1 &  &  &  &  &  &  &  &  \\ 
+  15 act\_sp\_betw & -0.19 & -0.08 & 0.18 & -0.03 & -0.1 & -0.01 & 0.02 & -0.03 & 0.02 & 0 & 0.92 & 1 & -0.91 & 0.92 & 1 &  &  &  &  &  &  &  \\ 
+  16 act\_sp\_bon & 0.13 & 0 & -0.27 & 0.06 & 0.18 & 0.03 & -0.04 & 0.05 & -0.04 & 0.01 & -0.98 & -0.89 & 0.93 & -0.98 & -0.89 & 1 &  &  &  &  &  &  \\ 
+  17 oth\_s\_clos & 0.1 & 0.22 & 0.56 & -0.11 & -0.35 & -0.14 & -0.04 & -0.12 & -0.05 & -0.13 & 0.14 & -0.01 & -0.18 & 0.14 & -0.01 & -0.18 & 1 &  &  &  &  &  \\ 
+  18 oth\_s\_betw & 0.12 & 0.26 & 0.66 & -0.1 & -0.33 & -0.09 & -0.05 & -0.12 & -0.05 & -0.12 & 0.09 & -0.01 & -0.17 & 0.09 & -0.01 & -0.14 & 0.87 & 1 &  &  &  &  \\ 
+  19 oth\_s\_bon & -0.08 & -0.23 & -0.59 & 0.11 & 0.36 & 0.13 & 0.04 & 0.12 & 0.04 & 0.13 & -0.1 & 0.02 & 0.18 & -0.1 & 0.02 & 0.17 & -0.94 & -0.91 & 1 &  &  &  \\ 
+  20 oth\_sp\_clos & 0.1 & 0.22 & 0.56 & -0.11 & -0.35 & -0.14 & -0.04 & -0.12 & -0.05 & -0.13 & 0.14 & -0.01 & -0.18 & 0.14 & -0.01 & -0.18 & 1 & 0.87 & -0.94 & 1 &  &  \\ 
+  21 oth\_sp\_betw & 0.12 & 0.26 & 0.66 & -0.1 & -0.33 & -0.09 & -0.05 & -0.12 & -0.05 & -0.12 & 0.09 & -0.01 & -0.17 & 0.09 & -0.01 & -0.14 & 0.87 & 1 & -0.91 & 0.87 & 1 &  \\ 
+  22 oth\_sp\_bon & -0.09 & -0.24 & -0.55 & 0.11 & 0.35 & 0.16 & 0.05 & 0.11 & 0.05 & 0.13 & -0.11 & 0.03 & 0.17 & -0.11 & 0.03 & 0.18 & -0.96 & -0.87 & 0.97 & -0.96 & -0.87 & 1 \\ 
   
