--- a/markdown/upper_tex.tex
+++ b/markdown/upper_tex.tex
@@ -1,23 +1,23 @@
  & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15 & 16 & 17 & 18 & 19 & 20 & 21 \\ 
- 1 won\_brep\_percent & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  2 won\_brep\_dummy & 0.79 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  3 success\_of\_stated\_obj & 0.26 & 0.09 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  4 sales\_growth & 0.14 & 0.02 & 0.06 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  5 oper\_profit\_growth & -0.16 & 0.02 & -0.05 & -0.13 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  6 log(active.activist.size) & 0.22 & 0.15 & 0.08 & 0.06 & 0.08 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  7 investor.number & 0.21 & 0.13 & 0.09 & -0.01 & -0.08 & 0.3 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  8 total.activist.number & 0.21 & 0.13 & 0.09 & -0.01 & -0.08 & 0.3 & 1 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  9 log(activist.size.vweighted) & -0.14 & 0.02 & 0.13 & 0.04 & -0.03 & 0.08 & 0.32 & 0.32 & 1 &  &  &  &  &  &  &  &  &  &  &  &  \\ 
-  10 log(activist.size.average) & -0.28 & -0.08 & 0.09 & -0.02 & 0.02 & -0.15 & -0.23 & -0.23 & 0.61 & 1 &  &  &  &  &  &  &  &  &  &  &  \\ 
-  11 age & 0.05 & 0.03 & -0.06 & 0.09 & 0.02 & 0.16 & 0.07 & 0.07 & 0.08 & -0.07 & 1 &  &  &  &  &  &  &  &  &  &  \\ 
-  12 leverage & -0.09 & 0.02 & -0.04 & -0.01 & 0.01 & 0.13 & -0.02 & -0.02 & -0.01 & -0.04 & 0.05 & 1 &  &  &  &  &  &  &  &  &  \\ 
-  13 log(size) & -0.13 & 0.04 & -0.03 & -0.02 & 0.03 & 0.37 & 0.12 & 0.12 & 0.25 & 0 & 0.46 & 0.06 & 1 &  &  &  &  &  &  &  &  \\ 
-  14 mtb & -0.05 & 0.02 & -0.03 & 0.01 & 0 & 0.11 & -0.03 & -0.03 & 0 & -0.02 & 0.04 & 0.96 & 0.06 & 1 &  &  &  &  &  &  &  \\ 
-  15 oper\_profit & -0.12 & 0.03 & -0.18 & -0.05 & -0.02 & -0.03 & 0.06 & 0.06 & 0.04 & -0.07 & 0.3 & 0.01 & 0.52 & 0.01 & 1 &  &  &  &  &  &  \\ 
-  16 roa & -0.03 & 0.02 & 0.05 & 0.04 & 0.08 & 0.01 & -0.02 & -0.02 & 0 & -0.05 & 0.09 & 0.02 & 0.02 & 0 & 0 & 1 &  &  &  &  &  \\ 
-  17 tobins\_q & 0.19 & 0.07 & 0.1 & 0.2 & 0.03 & 0.08 & -0.02 & -0.02 & 0.11 & 0.08 & -0.08 & 0.01 & -0.03 & 0.07 & 0.01 & -0.02 & 1 &  &  &  &  \\ 
-  18 asset\_turnover & 0.07 & 0.02 & -0.03 & -0.11 & -0.01 & 0.04 & -0.03 & -0.03 & -0.04 & -0.03 & 0.14 & -0.02 & -0.01 & 0.02 & 0.07 & 0.03 & -0.07 & 1 &  &  &  \\ 
-  19 rd\_to\_assets & -0.13 & -0.09 & -0.01 & -0.02 & -0.02 & 0.11 & 0.03 & 0.03 & 0.16 & 0.06 & 0.08 & -0.01 & 0.29 & 0 & 0.12 & -0.03 & -0.01 & -0.05 & 1 &  &  \\ 
-  20 revtq & -0.11 & 0.04 & -0.14 & -0.03 & -0.01 & -0.02 & 0.04 & 0.04 & 0 & -0.08 & 0.3 & 0 & 0.48 & 0 & 0.95 & 0 & -0.01 & 0.18 & 0.03 & 1 &  \\ 
-  21 saleq & 0.1 & 0.11 & 0.01 & -0.04 & -0.03 & 0.32 & 0.5 & 0.5 & 0.15 & -0.19 & 0.49 & 0.24 & 0.62 & 0.09 & 0.76 & 0.11 & 0.05 & 0.01 & 0.09 & 1 & 1 \\ 
+ 1 checked\_board\_seats\_won & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  2 won\_board\_ind & 0.67 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  3 success\_of\_stated\_obj & 0.23 & 0.22 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  4 sales\_growth & -0.05 & -0.18 & 0.09 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  5 oper\_profit\_growth & 0.06 & 0.06 & -0.03 & -0.11 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  6 log(active.activist.size) & -0.16 & -0.23 & 0.06 & 0.18 & 0.07 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  7 investor.number & 0.25 & 0.3 & 0.01 & -0.1 & -0.08 & -0.64 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  8 total.activist.number & 0.25 & 0.3 & 0.01 & -0.1 & -0.08 & -0.64 & 1 & 1 &  &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  9 log(activist.size.vweighted) & -0.3 & -0.32 & 0.06 & 0.17 & 0.02 & 0.79 & -0.73 & -0.73 & 1 &  &  &  &  &  &  &  &  &  &  &  &  \\ 
+  10 log(activist.size.average) & -0.28 & -0.31 & 0.03 & 0.14 & 0.03 & 0.8 & -0.83 & -0.83 & 0.97 & 1 &  &  &  &  &  &  &  &  &  &  &  \\ 
+  11 age & -0.21 & -0.22 & -0.04 & 0.19 & 0.01 & 0.27 & 0 & -0.01 & 0.19 & 0.15 & 1 &  &  &  &  &  &  &  &  &  &  \\ 
+  12 leverage & -0.03 & 0.1 & -0.03 & -0.01 & 0.01 & 0.06 & -0.02 & -0.02 & 0.01 & 0 & 0.03 & 1 &  &  &  &  &  &  &  &  &  \\ 
+  13 log(size) & -0.01 & 0.01 & -0.03 & -0.05 & 0.03 & 0.26 & 0.11 & 0.11 & 0.11 & 0.03 & 0.53 & 0.04 & 1 &  &  &  &  &  &  &  &  \\ 
+  14 mtb & 0.08 & 0.14 & -0.02 & 0.02 & 0 & 0.06 & -0.03 & -0.03 & 0.01 & 0.01 & 0.03 & 0.96 & 0.04 & 1 &  &  &  &  &  &  &  \\ 
+  15 oper\_profit & -0.2 & -0.3 & -0.2 & -0.06 & -0.01 & -0.02 & 0.04 & 0.04 & 0.03 & 0.01 & 0.37 & 0 & 0.56 & 0.01 & 1 &  &  &  &  &  &  \\ 
+  16 roa & -0.09 & -0.06 & 0.04 & 0.08 & 0.08 & 0.06 & -0.05 & -0.05 & 0.06 & 0.05 & 0.12 & 0.02 & 0.04 & 0 & 0.01 & 1 &  &  &  &  &  \\ 
+  17 tobins\_q & 0.38 & 0.15 & 0.11 & 0.25 & 0.02 & 0 & -0.03 & -0.02 & 0.01 & -0.01 & -0.08 & 0.01 & -0.05 & 0.08 & 0.01 & -0.02 & 1 &  &  &  &  \\ 
+  18 asset\_turnover & 0.08 & 0.08 & -0.03 & -0.15 & -0.02 & -0.02 & 0 & 0 & -0.05 & -0.04 & 0.11 & -0.03 & -0.03 & 0.03 & 0.11 & 0 & -0.06 & 1 &  &  &  \\ 
+  19 rd\_to\_assets & 0.05 & 0.08 & 0 & -0.03 & -0.01 & 0.08 & 0.03 & 0.03 & 0.1 & 0.05 & 0.11 & -0.02 & 0.26 & 0 & 0.1 & -0.05 & -0.03 & -0.03 & 1 &  &  \\ 
+  20 revtq & -0.22 & -0.28 & -0.14 & -0.04 & -0.01 & 0 & 0.01 & 0.01 & 0.03 & 0.01 & 0.38 & -0.01 & 0.55 & 0 & 0.95 & 0.02 & -0.01 & 0.18 & 0.02 & 1 &  \\ 
+  21 saleq & -0.26 & -0.32 & 0.16 & -0.1 & -0.04 & 0.36 & 0.38 & 0.38 & 0.19 & -0.21 & 0.56 & 0.15 & 0.68 & -0.02 & 0.72 & 0.17 & 0.05 & 0.02 & 0.03 & 1 & 1 \\ 
   
