--- a/markdown/short_summary_tex.tex
+++ b/markdown/short_summary_tex.tex
@@ -1,34 +1,27 @@
- campaign outcome & checked\_board\_seats\_won & 0 & 0 & 1.51 & 1 & 2 & 7 & 1.46 \\ 
-  campaign outcome & won\_board\_ind & 0 & 0 & 0.71 & 1 & 1 & 1 & 0.46 \\ 
-  campaign outcome & success\_of\_stated\_obj & 0 & 0 & 0.64 & 1 & 1 & 1 & 0.48 \\ 
-  campaign outcome & sales\_growth & -0.96 & -0.02 & 0.4 & 0 & 0.03 & 25.38 & 3 \\ 
-  campaign outcome & oper\_profit\_growth & -10.47 & -0.02 & 0.1 & 0 & 0.07 & 11.09 & 1.51 \\ 
-  activists' persuasiveness & log(active.activist.size) & 3.23 & 7.36 & 9.64 & 9.07 & 11.58 & 17.54 & 3.18 \\ 
-  network variable & investor.number & 2 & 54 & 63.75 & 72 & 85 & 123 & 27.64 \\ 
-  network variable & total.activist.number & 1 & 53 & 62.69 & 71 & 83 & 122 & 27.62 \\ 
-  network variable & log(activist.size.vweighted) & 9.79 & 10.69 & 12.66 & 10.98 & 12.57 & 23.11 & 3.1 \\ 
-  network variable & log(activist.size.average) & 9.38 & 10.23 & 12.1 & 10.37 & 11.17 & 19.81 & 3.18 \\ 
-  network variable & log(inv\_size\_nw\_s) & 12 & 15.12 & 17.94 & 16.17 & 20.48 & 28.35 & 3.92 \\ 
-  network variable & log(inv\_size\_nw\_spr) & 3.52 & 6.99 & 9.73 & 8.45 & 12.18 & 19.8 & 3.87 \\ 
-  network variable & log(act\_size\_nw\_s) & -Inf & 15.11 & -Inf & 16.16 & 19.73 & 28.29 & NaN \\ 
-  network variable & log(act\_size\_nw\_spr) & -Inf & 6.86 & -Inf & 8.3 & 11.74 & 19.76 & NaN \\ 
-  network variable & log(act\_s\_clos) & -4.46 & -1.11 & -0.36 & 0.44 & 0.78 & 2.41 & 1.54 \\ 
-  network variable & log(oth\_s\_clos) & -3.66 & -1.36 & -0.81 & -0.66 & -0.01 & 2.45 & 1.12 \\ 
-  network variable & log(act\_s\_betw) & -2.46 & -0.17 & 0.52 & 0.68 & 0.89 & 2.45 & 0.89 \\ 
-  network variable & log(oth\_s\_betw) & -5.84 & -1.07 & -0.7 & -0.45 & 0.15 & 2.21 & 1.45 \\ 
-  network variable & spring fund & 0 & 0 & 0.02 & 0 & 0.01 & 0.97 & 0.04 \\ 
-  network variable & \# of connections fund & 1 & 1 & 30.61 & 4 & 15 & 3369 & 129.49 \\ 
-  network variable & spring top20 & 0 & 0 & 0.02 & 0 & 0.01 & 0.97 & 0.04 \\ 
-  network variable & \# of connections top20 & 1 & 1 & 30.61 & 4 & 15 & 3369 & 129.49 \\ 
-  control variable & log(size) & 3.03 & 5.81 & 7.45 & 7.24 & 8.74 & 13.03 & 2.09 \\ 
-  control variable & age & 1 & 11 & 23.45 & 19 & 32.5 & 53 & 15.1 \\ 
-  control variable & leverage & -30.1 & 0.1 & 1.17 & 0.43 & 1.19 & 112.41 & 6.16 \\ 
-  control variable & mtb & -113.94 & 1.21 & 2.98 & 1.69 & 2.69 & 316.84 & 16.74 \\ 
-  control variable & oper\_profit & -1061 & 10.65 & 720.09 & 58.57 & 262.71 & 21332 & 2595.16 \\ 
-  control variable & roa & -1938.71 & -40.96 & 53.59 & 41.28 & 122.54 & 4325.62 & 351.92 \\ 
-  control variable & tobins\_q & 0.17 & 0.86 & 1.45 & 1.19 & 1.59 & 19.54 & 1.64 \\ 
-  control variable & asset\_turnover & -0.06 & 0.08 & 0.19 & 0.16 & 0.25 & 1.2 & 0.16 \\ 
-  control variable & rd\_to\_assets & 0 & 0 & 36.63 & 0 & 4.92 & 1444 & 171.03 \\ 
-  control variable & revtq & -1569.77 & 78.19 & 4160.4 & 294.94 & 1247.88 & 124238 & 14395.7 \\ 
-  control variable & saleq & 5.54 & 66.37 & 4881.28 & 242.01 & 1771 & 35712 & 10729.93 \\ 
+ Campaign outcome & Success of stated goals & 0.49 & 0.5 & 0 & 0 & 0 & 1 & 1 \\ 
+   & Won board seat(s) & 0.72 & 0.45 & 0 & 0 & 1 & 1 & 1 \\ 
+  Activist power & Perc. active ownership & 9.41 & 3.11 & 3.23 & 7.16 & 8.71 & 11.49 & 17.54 \\ 
+   & Import. activist ownership & 0.54 & 0.22 & 0 & 0.43 & 0.69 & 0.69 & 0.69 \\ 
+  Network & Num. large investors & 2.45 & 0.4 & 0 & 2.3 & 2.56 & 2.64 & 2.89 \\ 
+   & log(Num. activist connections) & 9.36 & 2.42 & 0 & 8.29 & 9.86 & 10.78 & 15.44 \\ 
+   & Perc. large ownership & 11.17 & 2.07 & 0 & 10.65 & 11.26 & 11.76 & 18.45 \\ 
+   & Simple con. weighted by perc. & 21.62 & 2.83 & 0 & 20.36 & 21.35 & 23.15 & 28.31 \\ 
+   & Spring con. weighted by perc. & 5.99 & 3 & 0 & 4.03 & 5.92 & 7.44 & 16.92 \\ 
+   & Simple con. weighted by import. & 5.54 & 2.85 & 0 & 4.57 & 6.31 & 7.23 & 12.41 \\ 
+   & Simple con. weighted by import. & 0.42 & 0.7 & 0 & 0.01 & 0.14 & 0.54 & 4.38 \\ 
+   & Simple closeness centrality & 6.12 & 2.23 & 0 & 6.22 & 7.1 & 7.52 & 9.75 \\ 
+   & Spring closeness centrality & 6.35 & 2.26 & 0 & 6.38 & 7.37 & 7.78 & 9.97 \\ 
+   & Simple betweenness centrality & 13.91 & 2.73 & 0 & 14.1 & 15.11 & 15.56 & 17.67 \\ 
+   & Spring betweenness centrality & 12.03 & 2.76 & 0 & 11.96 & 13.13 & 13.74 & 15.75 \\ 
+   & Spring strength & 0.04 & 0.09 & 0 & 0 & 0 & 0.02 & 1 \\ 
+   & Simple strength & 120.26 & 294.77 & 1 & 7 & 21 & 66 & 4239 \\ 
+  Controls & log(Market capitalization) & 7.2 & 1.95 & 3.03 & 5.75 & 7 & 8.33 & 13.03 \\ 
+   & Poison pill & 0.37 & 0.48 & 0 & 0 & 0 & 1 & 1 \\ 
+   & Firm age & 22.33 & 14.03 & 1 & 11 & 19 & 30 & 53 \\ 
+   & Leverage & 1.25 & 6.96 & -30.1 & 0.09 & 0.43 & 1.2 & 112.41 \\ 
+   & MTB & 3.26 & 19.05 & -113.94 & 1.15 & 1.8 & 2.9 & 316.84 \\ 
+   & ROA & 53.08 & 393.1 & -1938.71 & -38.48 & 40.07 & 111.66 & 4325.62 \\ 
+   & Short term objective & 0.38 & 0.49 & 0 & 0 & 0 & 1 & 1 \\ 
+  Campaign cost & Exit after board demands & 0.1 & 0.31 & 0 & 0 & 0 & 0 & 1 \\ 
+   & Exit after proxy fight & 0.44 & 0.5 & 0 & 0 & 0 & 1 & 1 \\ 
   
