--- a/markdown/sum.table_tex_short.tex
+++ b/markdown/sum.table_tex_short.tex
@@ -1,19 +1,18 @@
- General undervaluation/maximize shareholder value & 0 & 0\% & NA \\ 
-  Excess cash, under-leverage, dividends/repurchases & 73 & 15.4\% & 68.5\% \\ 
-  Equity issuance, restructure debt, recapitalization & 41 & 8.67\% & 82.9\% \\ 
-  Operational efficiency & 47 & 9.94\% & 46.8\% \\ 
-  Lack of focus, business restructuring and spinning off & 69 & 14.6\% & 71\% \\ 
-  M\&A: as target (against the deal/for better terms) & 46 & 9.73\% & 32.6\% \\ 
-  M\&A: as acquirer (against the deal/for better terms) & 15 & 3.17\% & 80\% \\ 
-  Pursue growth strategies & 6 & 1.27\% & 33.3\% \\ 
-  Sell company or main assets to a third party & 103 & 21.8\% & 52.4\% \\ 
-  Take control/buyout company and/or take it private & 12 & 2.54\% & 33.3\% \\ 
-  Rescind takeover defenses & 29 & 6.13\% & 48.3\% \\ 
-  Oust CEO, chairman & 50 & 10.6\% & 60\% \\ 
-  Board independence and fair representation & 135 & 28.5\% & 71.9\% \\ 
-  More information disclosure/potential fraud & 36 & 7.61\% & 22.2\% \\ 
-  Excess executive compensation/pay for performance & 44 & 9.3\% & 50\% \\ 
-  Institute enviromental protection policy & 5 & 1.06\% & 0\% \\ 
-  Public Short Position/Bear Raid & 2 & 0.228\% & NA \\ 
-  Sum of categories not falling into general undervaluation & 473 & 100\% & 66.8\% \\ 
+ Capital structure & Excess cash, under-leverage, dividends/repurchases & 66 & 18.2\% & 68.2\% \\ 
+   & Equity issuance, restructure debt, recapitalization & 23 & 6.4\% & 73.9\% \\ 
+  Business strategy & Operational efficiency & 36 & 9.9\% & 52.8\% \\ 
+   & Lack of focus, business restructuring and spinning off & 53 & 14.6\% & 66\% \\ 
+   & M\&A: as target (against the deal/for better terms) & 34 & 9.4\% & 32.4\% \\ 
+   & M\&A: as acquirer (against the deal/for better terms) & 13 & 3.6\% & 76.9\% \\ 
+   & Pursue growth strategies & 5 & 1.4\% & 40\% \\ 
+  Sell company & Sell company or main assets to a third party & 87 & 24.0\% & 50.6\% \\ 
+   & Take control/buyout company and/or take it private & 11 & 3.0\% & 36.4\% \\ 
+  Governance & Rescind takeover defenses & 23 & 6.4\% & 47.8\% \\ 
+   & Oust CEO, chairman & 35 & 9.7\% & 62.9\% \\ 
+   & Board independence and fair representation & 99 & 27.3\% & 73.7\% \\ 
+   & More information disclosure/potential fraud & 23 & 6.4\% & 34.8\% \\ 
+   & Excess executive compensation/pay for performance & 37 & 10.2\% & 51.4\% \\ 
+  Other & Institute enviromental protection policy & 3 & 0.8\% & 0\% \\ 
+   & Public Short Position/Bear Raid & 2 & 0.4\% & NA \\ 
+   & Total number & 362 & 100\% & 66.9\% \\ 
   
